# prbench

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  README_TIDYBOT.md  README_base_tests.md  arm_only_test.py  base_test.py  config.json  generate_all_videos.py  joint_command_test copy.py  joint_command_test.py  pyproject.toml  run_ci_checks.sh  test_tidybot_integration.py  test_tidybot_robot_env.ipynb
.github/workflows/: ci.yml  generate-docs.yml
demos/: README.md  prbench_Obstruction2D-o2-v0_1751640130.json  prbench_Obstruction2D-o2-v0_1751640132.json
demos/Clutter2D-o1/1/: 1752170909.p
demos/Clutter2D-o25/12/: 1752171244.p
demos/ClutteredRetrieval2D-o1/0/: 1758719765.p
demos/ClutteredRetrieval2D-o1/2/: 1752266113.p
demos/ClutteredRetrieval2D-o10/0/: 1752171054.p  1752266179.p  1758719841.p
demos/ClutteredRetrieval2D-o25/0/: 1758719976.p
demos/ClutteredRetrieval2D-o25/4/: 1752266253.p
demos/ClutteredStorage2D-b1/0/: 1752340291.p
demos/ClutteredStorage2D-b15/0/: 1752341751.p
demos/ClutteredStorage2D-b7/1/: 1752340825.p
demos/CoffeeMaking2D-coffee-full/42/: 1752173784.p  1752173808.p
demos/DynObstruction2D-o0/0/: 1757275098.p  1757344518.p
demos/DynObstruction2D-o0/4/: 1757345126.p
demos/DynObstruction2D-o1/0/: 1757275123.p  1757345185.p  1758746695.p  1758747197.p  1758747346.p
demos/DynObstruction2D-o1/1/: 1758746705.p  1758746975.p  1758746982.p  1758747227.p
demos/DynObstruction2D-o1/2/: 1758746710.p  1758747230.p  1758749970.p
demos/DynObstruction2D-o1/3/: 1758746713.p  1758747233.p
demos/DynObstruction2D-o1/4/: 1758746741.p
demos/DynObstruction2D-o1/5/: 1758746745.p
demos/DynObstruction2D-o2/0/: 1757275014.p  1757345215.p  1757556526.p
demos/DynObstruction2D-o3/0/: 1757275181.p  1757276412.p
demos/DynObstruction2D-o3/7/: 1757345386.p
demos/Motion2D-p0/0/: 1758750533.p  1758750721.p
demos/Motion2D-p0/1/: 1758750778.p
docs/envs/: Clutter2D-o1.md  Clutter2D-o10.md  Clutter2D-o25.md  ClutteredRetrieval2D-o1.md  ClutteredRetrieval2D-o10.md  ClutteredRetrieval2D-o25.md  ClutteredStorage2D-b1.md  ClutteredStorage2D-b15.md  ClutteredStorage2D-b3.md  ClutteredStorage2D-b7.md  CoffeeMaking2D-coffee-basic.md  CoffeeMaking2D-coffee-cream.md  CoffeeMaking2D-coffee-full.md  CoffeeMaking2D-coffee-sugar.md  DynObstruction2D-o0.md  DynObstruction2D-o1.md  DynObstruction2D-o2.md  DynObstruction2D-o3.md  DynObstruction2D-o4.md  Motion2D-p0.md  Motion2D-p1.md  Motion2D-p2.md  Motion2D-p3.md  Motion2D-p4.md  Motion2D-p5.md  Motion3D.md  Obstruction2D-o0.md  Obstruction2D-o1.md  Obstruction2D-o2.md  Obstruction2D-o3.md  Obstruction2D-o4.md  Obstruction3D-o0.md  Obstruction3D-o1.md  Obstruction3D-o2.md  Obstruction3D-o3.md  Obstruction3D-o4.md  PushPullHook2D.md  StickButton2D-b1.md  StickButton2D-b10.md  StickButton2D-b2.md  (+22 more)
scripts/: DEMO_COLLECTION.md  README.md  basic_pymunk.py  collect_demos.py  generate_demo_video.py  generate_env_docs.py
scripts/tidybot/: arm_only_test.py  base_test.py  generate_tidybot_envs.py  joint_command_test.py  pick_and_place_policy.py
src/prbench/: __init__.py  core.py  object_types.py  utils.py
src/prbench/envs/: __init__.py  (+22 more)
tests/: conftest.py  test_demo_collection.py  test_envs.py  test_utils.py
tests/envs/: test_arm_controller.py  test_base_controller.py  test_clutter2d.py  test_clutteredretrieval2d.py  test_clutteredstorage2d.py  test_motion2d.py  test_obstruction2d.py  test_pushpullhook2d.py  test_stickbutton2d.py  test_tidybot3d.py  test_tidybot3d_basic.py  test_tidybot3d_cupboard.py  test_tidybot3d_ik.py  test_tidybot_mujoco_env.py  test_tidybot_mujoco_env_render.py  test_tidybot_mujoco_sim.py
(+222 files in other folders)
