[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prbench"
version = "0.1.0"
description = "A robotics benchmark for physical reasoning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "matplotlib",
   "numpy",
   "geom2drobotenvs@git+https://github.com/tomsilver/geom2d-robot-envs",
   # TidyBot dependencies
   "mujoco==3.2.4",
   "pin>=2.7.0", 
   "ruckig>=0.12.2",
   "opencv-python>=4.9.0",
   "flask>=3.0.2",
   "flask_socketio>=5.3.6",
   "pyzmq>=25.1.2",
   "redis>=5.0.6",
   "pygame>=2.5.2",
   "scipy>=1.12.0",
   "h5py>=3.11.0",
   "tqdm>=4.66.2",
   "threadpoolctl>=3.5.0",
   # PyBullet dependencies
   "pybullet==3.2.7",
   "pybullet-helpers@git+https://github.com/tomsilver/pybullet-helpers.git",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prbench = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pygame.*",
    "dill.*",
    "mujoco.*",
    "pin.*",
    "ruckig.*",
    "flask.*",
    "flask_socketio.*",
    "zmq.*",
    "redis.*",
    "phoenix6.*",
    "cv2.*",
    "pybullet.*",
]
ignore_missing_imports = true
